--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "G. M. Ansarul Kabir",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.2",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^6.0.2",
